--- a/index.html
+++ b/index.html
@@ -8,8 +8,17 @@
    <h1>高田村過去放送リンク集</h1>
    <h2>2024年</h2>
    <h3>6月</h3>
-   
-     <p>6日：<a href="https://www.youtube.com/watch?v=ES1wbbKQkuI" target="_blank" rel="noopener noreferrer">高田健志</a></p>
-     <p>7日：<a href="https://www.youtube.com/watch?v=IzetesOq4mw" target="_blank" rel="noopener noreferrer">高田健志</a></p>
+     <p>1日：
+      <a href="https://www.youtube.com/watch?v=P35s1TTO6lk" target="_blank" rel="noopener noreferrer">高田健志</a>
+     </p>
+     <p>5日：
+      <a href="https://www.youtube.com/watch?v=JR3Spi5BxUo" target="_blank" rel="noopener noreferrer">高田健志</a>
+     </p>
+     <p>6日：
+      <a href="https://www.youtube.com/watch?v=ES1wbbKQkuI" target="_blank" rel="noopener noreferrer">高田健志</a>
+     </p>
+     <p>7日：
+      <a href="https://www.youtube.com/watch?v=IzetesOq4mw" target="_blank" rel="noopener noreferrer">高田健志</a>
+     </p>
  </body>
 </html>
